Fix build target

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,3 +10,13 @@
     </div>
   </div>
 </div>
+<footer class="footer">
+  <div class="footer-content">
+    <p>
+      © 2024, Developed by <strong>André Carraro</strong>.
+    </p>
+    <p>
+      Contact: <a href="mailto:andre.carraro@totvs.com.br">andre.carraro&#64;totvs.com.br</a>
+    </p>
+  </div>
+</footer>
