Ajuste nos dados do footer

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,7 +13,7 @@
 <footer class="footer">
   <div class="footer-content">
     <p>
-      © 2024, Developed by <strong>André Carraro</strong>.
+      Developed by <strong>André Carraro</strong>.
     </p>
     <p>
       Contact: <a href="mailto:andre.carraro@totvs.com.br">andre.carraro&#64;totvs.com.br</a>
